--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-Bonjour    
+<h1> figuring out git/github</h1>   
 <script src="main.js"></script>    
 </body>
 </html>
