ajouter qq balises html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/03a18e1a06.js" crossorigin="anonymous"></script>
     <title>Les Couleurs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1> figuring out git/github</h1>   
+   <div class="container">
+       <header>
+           <h1> Bonjour</h1>
+           <h2> je t'apprends les coulers</h2>
+       </header>
+       <div class="main-img">
+           <!-- the main image of the car here, it can be (fontawesome)-->
+       </div>
+       <div class="svg">
+           <!-- svg image of a boy-->
+       </div>
+       <footer>
+           <p> &copy; Samia</p>
+           <p> fait avec <i class="fas fa-heart"></i> et  <i class="fas fa-coffee"></i></p>
+       </footer>
+   </div>
+
 <script src="main.js"></script>    
 </body>
 </html>
