donner un peu de style sans finir le tout

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/03a18e1a06.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
     <title>Les Couleurs</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="container">
+   
        <header>
-           <h1> Bonjour</h1>
-           <h2> je t'apprends les coulers</h2>
+           <h1> Bonjour </h1> 
+           <h2>J'apprends les couleurs en m'amusant</h2>
        </header>
        <div class="main-img">
            <!-- the main image of the car here, it can be (fontawesome)-->
-           <i class="fas fa-car-side"></i>
+           <a href=""><i class="fas fa-car-side"></i></a>
        </div>
        <div class="svg">
            <!-- svg image of a boy-->
-           <svg width="1082" height="725" viewBox="0 0 1082 725" fill="none" xmlns="http://www.w3.org/2000/svg">
+           <svg width="700" height="500" viewBox="0 0 1082 725" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="undraw_true_friends_c94g 1">
             <g id="tete">
             <path id="Vector" d="M438 257C458.435 257 475 240.435 475 220C475 199.565 458.435 183 438 183C417.565 183 401 199.565 401 220C401 240.435 417.565 257 438 257Z" fill="#FFDEE3"/>
@@ -51,7 +52,7 @@
            <p> &copy; Samia</p>
            <p> fait avec <i class="fas fa-heart"></i> et  <i class="fas fa-coffee"></i></p>
        </footer>
-   </div>
+  
 
 <script src="main.js"></script>    
 </body>
