--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
            <!-- the main image of the car here, it can be (fontawesome)-->
            <a href=""><i class="fas fa-car-side"></i></a>
        </div>
+       <div id="color"> <span>Rouge</span></div>
        <div class="svg">
            <!-- svg image of a boy-->
            <svg width="700" height="500" viewBox="0 0 1082 725" fill="none" xmlns="http://www.w3.org/2000/svg">
