css and js not completed yet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +9,24 @@
     <title>Les Couleurs</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    
        <header>
            <h1> Bonjour </h1> 
            <h2>J'apprends les couleurs en m'amusant</h2>
        </header>
+
        <div class="main-img">
            <!-- the main image of the car here, it can be (fontawesome)-->
-           <a href=""><i class="fas fa-car-side"></i></a>
+           <a href="#"><i class="fas fa-car-side"></i></a> <!-- I could have used <button> instead of <a> link, but it's ok-->
        </div>
+
        <div id="color"> <span>Rouge</span></div>
+
        <div class="svg">
            <!-- svg image of a boy-->
+           
            <svg width="700" height="500" viewBox="0 0 1082 725" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g id="undraw_true_friends_c94g 1">
             <g id="tete">
@@ -48,13 +54,18 @@
             </g>
             </g>
             </svg>
+
        </div>
+
        <footer>
            <p> &copy; Samia</p>
            <p> fait avec <i class="fas fa-heart"></i> et  <i class="fas fa-coffee"></i></p>
        </footer>
   
 
-<script src="main.js"></script>    
+    <script src="main.js"></script> 
+
+    <!-- I COULD HAVE USED FLEXBOX FOR THE WHOLE BODY !-->   
+
 </body>
 </html>
