--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="style.css" />
     <script src="https://kit.fontawesome.com/03a18e1a06.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids&display=swap" rel="stylesheet">
     <title>Les Couleurs</title>
